sand-box-app/resources/storefront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
    spec:
        containers:
        - name: vc-storefront-web
          resources:
            requests:
              cpu: 125m
              memory: "256Mi"
            limits:
              cpu: 125m
              memory: "512Mi"
